# rustyPDF

./: README.md  icon.ts  index.html  package-lock.json  package.json  tasks.md  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: setup-pdfium.mjs
src/: App.tsx  keyboard.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ipc.rs  lib.rs  main.rs
src-tauri/src/pdf/: annotations.rs  cache.rs  document.rs  edit.rs  mod.rs  ocr.rs  render.rs  rich_text.rs  text.rs
src/annotations/: AnnotationLayer.tsx  AnnotationToolbar.tsx  TextFormatToolbar.tsx  annotations.css  coords.ts  persistence.ts  store.ts  textFormat.ts  types.ts
src/capture/: Toast.tsx  capture.ts  toast.css
src/ipc/: closeGuard.ts  opening.ts  pdf.ts
src/ocr/: OcrButton.tsx  TextLayer.tsx  ocr.css  ocr.ts  textLayer.css
src/search/: SearchPanel.tsx  search.css
src/state/: document.ts  ui.ts
src/styles/: global.css
src/tabs/: TabStrip.tsx  tabs.css
src/toolbar/: Toolbar.tsx  toolbar.css
src/viewer/: PageCanvas.tsx  PdfViewer.tsx  Thumbnails.tsx  imageDrop.ts  pageClipboard.ts  viewer.css
src/welcome/: Welcome.tsx  recentFiles.ts  welcome.css
