[package]
name = "rustpdf"
version = "0.1.0"
description = "Lightweight cross-platform PDF viewer with annotations"
edition = "2021"
rust-version = "1.77"

[lib]
name = "rustpdf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
parking_lot = "0.12"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
lru = "0.12"
pdfium-render = { version = "0.8", features = ["thread_safe", "image"] }
image = { version = "0.25", default-features = false }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
