[package]
name = "rustpdf"
version = "1.0.0"
description = "RustyPDF — lightweight cross-platform PDF viewer with annotations"
edition = "2021"
rust-version = "1.77"

[lib]
name = "rustpdf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# To enforce single-instance behaviour on Windows / Linux (so opening a PDF
# from Explorer routes through the running app instead of spawning a new
# process), uncomment the next stanza and run `cargo build` once with network
# access. macOS already gets multi-file opening through `RunEvent::Opened`.
# [target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
# tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
parking_lot = "0.12"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
lru = "0.12"
pdfium-render = { version = "0.8", features = ["thread_safe", "image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
# Subsetting CJK fonts before embedding keeps "export annotated PDF" output
# small (a 30 MB system .ttc would otherwise be embedded whole). ttf-parser
# resolves char → glyph id; subsetter strips everything else from the font.
ttf-parser = "0.21"
subsetter = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
